--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
-  <h1>CARD GAME</h1>
+<body style="background-color:green">
+  <h1 style="text-align:center">&spades;&hearts; STEVE'S CARD GAME &clubs;&diams;</h1>
+  <h2 style="text-align:center">Choose Your Game</h2>
+  <div style="text-align:center">
+    <button id="BlackJackButton" type="button">BlackJack</button>
+    <button id="BlackJackButton" type="button">&spades;&hearts;&clubs;&diams;</button>
+    <button id="BlackJackButton" type="button">&clubs;&diams;&spades;&hearts;</button>
+    <button id="BlackJackButton" type="button">&spades;&hearts;&clubs;&diams;</button>
+  </div>
+  <form id="newPlayerForm">
+    <div>
+      <label>Enter Player Name</label>
+      <input id="nameInput" type="text" autofocus /> </br>
+      <label>Enter Player Chips</label>
+      <input id="chipsInput" type="number"/>
+    </div>
+    <button id="addNewPlayerButton" type="submit">AddPlayer</button>
+  </form>
   </body>
   </html>
