--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <h2 style="text-align:center">Choose Your Game</h2>
   <div style="text-align:center">
     <button id="BlackJackButton" type="button">BlackJack</button>
-    <button id="BlackJackButton" type="button">&spades;&hearts;&clubs;&diams;</button>
-    <button id="BlackJackButton" type="button">&clubs;&diams;&spades;&hearts;</button>
-    <button id="BlackJackButton" type="button">&spades;&hearts;&clubs;&diams;</button>
+    <button id="buttonTwo" type="button">&spades;&hearts;&clubs;&diams;</button>
+    <button id="buttonThree" type="button">&clubs;&diams;&spades;&hearts;</button>
+    <button id="buttonFour" type="button">&spades;&hearts;&clubs;&diams;</button>
   </div>
   <form id="newPlayerForm">
     <div>
