--- a/index.html
+++ b/index.html
@@ -8,19 +8,12 @@
   <h1 style="text-align:center">&spades;&hearts; STEVE'S CARD GAME &clubs;&diams;</h1>
   <h2 style="text-align:center">Choose Your Game</h2>
   <div style="text-align:center">
-    <button id="BlackJackButton" type="button">BlackJack</button>
-    <button id="buttonTwo" type="button">&spades;&hearts;&clubs;&diams;</button>
-    <button id="buttonThree" type="button">&clubs;&diams;&spades;&hearts;</button>
-    <button id="buttonFour" type="button">&spades;&hearts;&clubs;&diams;</button>
+    <a href="html/BlackJackGame.html">BlackJack</a>
+    <a href="#">&spades;&hearts;&clubs;&diams;</a>
+    <a href="#"></ahref>&clubs;&diams;&spades;&hearts;</a>
+    <a href="#">&spades;&hearts;&clubs;&diams;</a>
   </div>
-  <form id="newPlayerForm">
-    <div>
-      <label>Enter Player Name</label>
-      <input id="nameInput" type="text" autofocus /> </br>
-      <label>Enter Player Chips</label>
-      <input id="chipsInput" type="number"/>
-    </div>
-    <button id="addNewPlayerButton" type="submit">AddPlayer</button>
-  </form>
+  <script src='/src/PlayBlackJack.js'></script>
   </body>
+
   </html>
