--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div style="text-align:center">
     <a href="html/BlackJackGame.html">BlackJack</a>
     <a href="#">&spades;&hearts;&clubs;&diams;</a>
-    <a href="#"></ahref>&clubs;&diams;&spades;&hearts;</a>
+    <a href="#">&clubs;&diams;&spades;&hearts;</a>
     <a href="#">&spades;&hearts;&clubs;&diams;</a>
   </div>
   <script src='/src/PlayBlackJack.js'></script>
