--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -6,8 +6,11 @@
   <script src='../dist/bundle.js'></script>
 </head>
 <body style="background-color:green">
-    <a href="../index.html">Back To Menu</a>
+   <nav> 
+     <a href="../index.html">Back To Menu</a>
+  </nav>
     <h1 style="text-align:center">&spades;&hearts; BlackJack &clubs;&diams;</h1>
+  <div id="createGameForm">
     <h2 style="text-align:center">Create Game</h2>
     <div>
       <label>Enter Player Name</label>
@@ -16,7 +19,16 @@
       <input id="chipsInput" type="number"/>
     </div>
     <button id="addNewPlayerButton" onclick="addNewPlayer()">AddPlayer</button>
+    <button id="createGameButton" onclick="createBlackJackGame()">Create Game</button>
     <ul id="playersList"></ul>
-    
+  </div>
+  <div id="tableDiv">
+    <div id="dealer">
+      <h3 style="text-align:center">Dealer</h3>
+    </div>
+    <div id="players" style="text-align:center">
+    <h3 style="text-align:center">players</h3>
+    </div>
+  </div>
 </body>
 </html>
