--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1 style="text-align:center">&spades;&hearts; STEVE'S CARD GAME &clubs;&diams;</h1>
   <h2 style="text-align:center">Choose Your Game</h2>
   <div style="text-align:center">
-    <a href="html/BlackJackGame.html">BlackJack</a>
+    <a href="html/PlayBlackJack.html">BlackJack</a>
     <a href="#">&spades;&hearts;&clubs;&diams;</a>
     <a href="#">&clubs;&diams;&spades;&hearts;</a>
     <a href="#">&spades;&hearts;&clubs;&diams;</a>
