added some divs and images

--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -23,11 +23,9 @@
     <ul id="playersList"></ul>
   </div>
   <div id="tableDiv">
-    <div id="dealer">
-      <h3 style="text-align:center">Dealer</h3>
+    <div id="dealer" style="text-align:center">
     </div>
     <div id="players" style="text-align:center">
-    <h3 style="text-align:center">players</h3>
     </div>
   </div>
 </body>
