added deck image

--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -23,10 +23,9 @@
     <ul id="playersList"></ul>
   </div>
   <div id="tableDiv">
-    <div id="dealer" style="text-align:center">
-    </div>
-    <div id="players" style="text-align:center">
-    </div>
+    <div id="dealer" style="text-align:center"></div>
+    <div id="table" style="text-align:center"></div>
+    <div id="players" style="text-align:center"></div>
   </div>
 </body>
 </html>
