--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -23,7 +23,10 @@
     <ul id="playersList"></ul>
   </div>
   <div id="tableDiv">
-    <div id="dealer" style="text-align:center"></div>
+    <div id="dealer" style="text-align:center">
+      <img src="../assets/avatars/dealer_avatar.png" style="height:80px;width:80px;">
+      <div id="dealer-cards-div"></div>
+    </div>
     <div id="table" style="text-align:center"></div>
     <div id="players" style="text-align:center"></div>
   </div>
