--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -10,7 +10,7 @@
      <a href="../index.html">Back To Menu</a>
   </nav>
     <h1 style="text-align:center">&spades;&hearts; BlackJack &clubs;&diams;</h1>
-  <div id="createGameForm">
+  <div id="createGameForm" style="text-align:center">
     <h2 style="text-align:center">Create Game</h2>
     <div>
       <label>Enter Player Name</label>
@@ -19,7 +19,7 @@
       <input id="chipsInput" type="number"/>
     </div>
     <button id="addNewPlayerButton" onclick="addNewPlayer()">AddPlayer</button>
-    <button id="createGameButton" onclick="createBlackJackGame()">Create Game</button>
+    <button id="createGameButton" onclick="createBlackJackGame()" style="display:none">Create Game</button>
     <ul id="playersList"></ul>
   </div>
   <div id="table-div" style="display:none">
