drawcard and stick

--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -30,7 +30,7 @@
     <div id="deck-div" style="text-align:center">
       <img id="deck-img" src="../assets/cards/card_deck.png" style="height:80px;width:80px;">
     </div>
-    <div id="players" style="text-align:center"></div>
+    <div id="players-div" style="text-align:center"></div>
   </div>
 </body>
 </html>
