--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="background-color:green">
-  <h1 style="text-align:center">&spades;&hearts; STEVE'S CARD GAME &clubs;&diams;</h1>
+  <h1 style="text-align:center">&spades;&hearts; STEVE'S CASINO &clubs;&diams;</h1>
   <h2 style="text-align:center">Choose Your Game</h2>
   <div style="text-align:center">
     <a href="html/PlayBlackJack.html">BlackJack</a>
