added value colours

--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -27,7 +27,7 @@
       <img id="dealer-img" src="../assets/avatars/dealer_avatar.png" style="height:80px;width:80px;">
       <div id="dealer-cards-div"></div>
       <div id="dealCards-div" style="text-align:center">
-        <div id="dealer-hand-value" style="color:red"></div>
+        <div id="dealer-hand-value"></div>
         <button id="dealCards-button" onclick="dealCards()" style="display:none">Deal Cards</button>
       </div>
     </div>
