--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -24,7 +24,7 @@
       <label>Enter Player Name</label>
       <input id="nameInput" type="text" autofocus /> </br>
       <label>Enter Player Chips</label>
-      <input id="chipsInput" type="number"/>
+      <input id="chipsInput" type="number" value="10000" step="5000"/>
     </div>
     <button id="addNewPlayerButton" onclick="addNewPlayer()">AddPlayer</button>
     <button id="createGameButton" onclick="createBlackJackGame()" style="display:none">Create Game</button>
