--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -36,11 +36,13 @@
       <div id="dealer-cards-div"></div>
       <div id="dealCards-div" style="text-align:center">
         <div id="dealer-hand-value"></div>
-        <button id="dealCards-button" onclick="dealCards()" style="display:none">Deal Cards</button>
       </div>
     </div>
     <div id="deck-div" style="text-align:center">
       <img id="deck-img" src="../assets/cards/card_deck.png" style="height:80px;width:80px;">
+    </div>
+    <div style="text-align: center">
+    <button id="dealCards-button" onclick="dealCards()" style="display:none">Deal Cards</button>
     </div>
     <div id="players-div" style="text-align:center"></div>
     <div id="next-div" style="text-align:center">
