--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -35,12 +35,12 @@
       <img id="dealer-img" src="../assets/avatars/dealer_avatar.png" style="height:80px;width:80px;">
       <div id="dealer-cards-div"></div>
       <div id="dealCards-div" style="text-align:center">
-        <div id="dealer-hand-value"></div>
+        <h3 id="dealer-hand-value"></h3>
       </div>
     </div>
-    <div id="deck-div" style="text-align:center">
-      <img id="deck-img" src="../assets/cards/card_deck.png" style="height:80px;width:80px;">
-    </div>
+    <!-- <div id="deck-div" style="text-align:center">
+      <img src="../assets/cards/card_deck.png" style="height:80px;width:80px;">
+    </div> -->
     <div id="next-div" style="text-align:center">
       <button id="next-button" onclick="nextRound()" style="display:none">Next Round</button>
     </div>
