--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -35,17 +35,13 @@
       <img id="dealer-img" src="../assets/avatars/dealer_avatar.png" style="height:80px;width:80px;">
       <div id="dealer-cards-div"></div>
       <div id="dealCards-div" style="text-align:center">
-        <h3 id="dealer-hand-value"></h3>
+        <div id="dealer-hand-value" style="font-size:20px"></div>
       </div>
     </div>
-    <!-- <div id="deck-div" style="text-align:center">
-      <img src="../assets/cards/card_deck.png" style="height:80px;width:80px;">
-    </div> -->
-    <div id="next-div" style="text-align:center">
-      <button id="next-button" onclick="nextRound()" style="display:none">Next Round</button>
+    <div id="deck-div" style="text-align:center">
+      <img id="deck-button" type="button" src="../assets/cards/card_deck.png" style="height:80px;width:80px;">
     </div>
     <div style="text-align: center">
-    <button id="dealCards-button" onclick="dealCards()" style="display:none">Deal Cards</button>
     </div>
     <div id="players-div" style="text-align:center"></div>
   </div>
