--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -32,7 +32,7 @@
   </div>
   <div id="table-div" style="display:none">
     <div id="dealer" style="text-align:center">
-      <img id="dealer-img" src="../assets/avatars/dealer_avatar.png" style="height:80px;width:80px;">
+      <img id="dealer-img" type="button" src="../assets/avatars/dealer_avatar.png" style="height:80px;width:80px;">
       <div id="dealer-cards-div"></div>
       <div id="dealCards-div" style="text-align:center">
         <div id="dealer-hand-value" style="font-size:20px"></div>
