--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
-<body style="background-color:green">
-  <h1 style="text-align:center">&spades;&hearts; STEVE'S CASINO &clubs;&diams;</h1>
-  <h2 style="text-align:center">Choose Your Game</h2>
-  <div style="text-align:center">
+<body>
+  <h1>&spades;&hearts; STEVE'S CASINO &clubs;&diams;</h1>
+  <h2>Choose Your Game</h2>
+  <div id="choose-game-div">
     <a href="html/PlayBlackJack.html">BlackJack</a>
     <a href="#">&spades;&hearts;&clubs;&diams;</a>
     <a href="#">&clubs;&diams;&spades;&hearts;</a>
