--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -23,7 +23,7 @@
     <h2>Create Game</h2>
     <div>
       <label>Enter Player Name</label>
-      <input id="nameInput" class="input" type="text" autofocus /> </br>
+      <input id="nameInput" class="input" type="text" onkeypress="addPlayerByClick(event)" autofocus /> </br>
       <label>Enter Player Chips</label>
       <input id="chipsInput" class="input" type="number" value="10000" step="5000"/>
     </div>
