refactored create elements

--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div id="deck-div" style="text-align:center">
-      <img id="deck-button"  class="buttonImage" type="button" onclick="makeBets()" src="../assets/cards/card_deck.png">
+      <img id="deck-button" class="buttonImage cursor" type="button" onclick="makeBets()" src="../assets/cards/card_deck.png">
     </div>
     <div style="text-align: center">
     </div>
