changed start game screen, added funky background

--- a/index.html
+++ b/index.html
@@ -6,14 +6,25 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-  <h1>&spades;&hearts; STEVE'S CASINO &clubs;&diams;</h1>
-  <h2>Choose Your Game</h2>
-  <div id="choose-game-div">
-    <a href="html/PlayBlackJack.html">BlackJack</a>
-    <a href="#">&spades;&hearts;&clubs;&diams;</a>
-    <a href="#">&clubs;&diams;&spades;&hearts;</a>
-    <a href="#">&spades;&hearts;&clubs;&diams;</a>
+  <div class="context">
+    <h1>&spades;&hearts;Steve's BlackJack&clubs;&diams;</h1><br><br>
+    <div id="choose-game-div">
+      <a class="start-game-link" href="html/PlayBlackJack.html">START GAME</a>
+    </div>
   </div>
-  </body>
-
-  </html>
+  <div class="area" >
+    <ul class="circles">
+      <img src="assets/cards/2_of_clubs.png">
+      <img src="assets/cards/5_of_diamonds.png">
+      <img src="assets/cards/8_of_hearts.png">
+      <img src="assets/cards/queen_of_spades.png">
+      <img src="assets/cards/king_of_clubs.png">
+      <img src="assets/cards/7_of_diamonds.png">
+      <img src="assets/cards/ace_of_clubs.png">
+      <img src="assets/cards/jack_of_hearts.png">
+      <img src="assets/cards/10_of_diamonds.png">
+      <img src="assets/cards/ace_of_spades.png">
+    </ul>
+  </div >
+</body>
+</html>
