--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -48,5 +48,19 @@
     </div>
     <div id="players-div" style="text-align:center"></div>
   </div>
+  <div class="area" >
+      <ul class="circles">
+        <img src="../assets/cards/2_of_clubs.png">
+        <img src="../assets/cards/5_of_diamonds.png">
+        <img src="../assets/cards/8_of_hearts.png">
+        <img src="../assets/cards/queen_of_spades.png">
+        <img src="../assets/cards/king_of_clubs.png">
+        <img src="../assets/cards/7_of_diamonds.png">
+        <img src="../assets/cards/ace_of_clubs.png">
+        <img src="../assets/cards/jack_of_hearts.png">
+        <img src="../assets/cards/10_of_diamonds.png">
+        <img src="../assets/cards/ace_of_spades.png">
+      </ul>
+    </div >
 </body>
 </html>
