added soloPlayer functions

--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -32,6 +32,9 @@
     <button id="createGameButton" class="fadedButton">Create Game</button>
     <br><br>
     <ul id="playersList"></ul>
+    <br><br>
+    <button id="create-solo-game-button" onclick="startSoloGame()">Start Solo Game</button>
+    <input id="solo-game-hands-input" class="input" type="number"/>
   </div>
   <div id="table-div" class="hidden">
     <div id="dealer" style="text-align:center">
