added solo player image and chips div

--- a/html/PlayBlackJack.html
+++ b/html/PlayBlackJack.html
@@ -34,6 +34,8 @@
     <ul id="playersList"></ul>
     <br><br>
     <div>
+        <label>Enter Player Name</label>
+        <input id="solo-game-name-input" class="input" type="text"/>
       <label>Number Of Hands</label>
       <input id="solo-game-hands-input" class="input" type="number"/>
     </div>
@@ -54,6 +56,7 @@
     <div style="text-align: center">
     </div>
     <div id="players-div" style="text-align:center"></div>
+    <div id="solo-player-div" style="text-align:center"></div>
   </div>
   <div class="area" >
       <ul class="circles">
